tests/baselines/reference/jsdocAugmentsMissingType.errors.txt
/a.js(2,14): error TS1005: '{' expected.


==== /a.js (1 errors) ====
    class A { constructor() { this.x = 0; } }
    /** @augments */
                 ~
!!! error TS1005: '{' expected.
    class B extends A {
        m() {
            this.x
        }
    }
    